# NotesO3

./: .gitignore  Cargo.toml  README.md  mockup.pdn
files/: .~lock.doc1.odt#  doc1.kra  doc1.odt
files-unpacked/doc1/: documentinfo.xml  maindoc.xml
files-unpacked/doc1/doc1/animation/: index.xml
files-unpacked/doc1/doc1/layers/: layer3  layer4
src/: main.rs
src/loaders/: kra.rs  mod.rs
src/ui/: mod.rs
