[package]
name = "cyprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
zip = "0.6"
quick-xml = "0.31.0"
scraper = "0.17.1"
iced = { version = "0.10.0", features = ["tokio", "image"] }
iced_web = "0.4.0"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
wasm-bindgen = "0.2.69"
reqwest = { version = "0.11", features = ["json"]}

[dependencies.web-sys]
version = "0.3.32"
features = [
    "Document",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "Storage",
    "Node",
    "Window",
]
